# giveaway-misc

./: README.rst  setup.cfg
.circleci/: config.yml
giveaway/: oauth.py
giveaway/http/: client.py
