[metadata]
name = giveaway-misc
url = https://github.com/blue-span/giveaway-misc
description = miscellaneous shared code
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
version = attr: setuptools_scm.get_version

[options]
setup_requires =
    setuptools_scm
packages =
    giveaway
    giveaway.http
install_requires =
    h11
    trio
